# NUT-Esp32-S3

./: .gitignore  CMakeLists.txt  README.adoc  README.txt  nut_fat_8MB.csv  platformio.ini  sdkconfig  sdkconfig.esp32-s3-devkitc-1  sdkconfig.old
docs/: ESP32_README.md  ESP32_SECURITY.md
fatfs/usr/local/etc/nut/: ups.conf  upsd.conf  upsd.users
include/: config.h.sample  nut_version.h.sample
lib/af_unix_socket/: af_unix_socket.c  af_unix_socket.h
lib/libusb/: events_posix.h  libusb.h
lib/syslog/: syslog.c  syslog.h
main/: CMakeLists.txt  idf_component.yml
src/: CMakeLists.txt  esp_exit.c  main.c  usb.c  wifi.c
src/common/: atexit.c  common-nut_version.c  common.c  parseconf.c  setenv.c  state.c  strptime.c  unsetenv.c  upsconf.c
src/drivers/: cps-hid.c  cps-hid.h  dstate.c  dstate.h  espusb.c  espusb.h  hidparser.c  hidtypes.h  libhid.c  main.c  main.h  mge-hid.c  mge-hid.h  upsdrvquery.c  upsdrvquery.h  usb-common.c  usb-common.h  usbhid-ups.c
src/server/: desc.c  netget.c  netinstcmd.c  netlist.c  netmisc.c  netset.c  netssl.c  netuser.c  sstate.c  sstate.h  stype.h  upsd.c  upsd.h  upstype.h  user.c
